src/objects/External_Object_Service__mdt.object
<CustomObject>
    <fields>
        <fullName>Apex_Mapper_Class__c</fullName>
        <label>Apex Mapper Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apex_Service_Class__c</fullName>
        <label>Apex Service Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Mapper_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this field is checked, the Apex Mapper Class will be invoked to map field values between SFDC and the External REST API</inlineHelpText>
        <label>Enable Mapper Class</label>
        <type>Checkbox</type>
    </fields>
    <label>External Object Service</label>
    <pluralLabel>External Object Services</pluralLabel>
</CustomObject>